# directory-layout

./: .cabal-sandbox  .gitignore  .travis.yml  .vim.custom  CHANGELOG.markdown  CHANGELOG.md  Guardfile  LICENSE  README.md  System-Directory-Layout-Check.html  System-Directory-Layout-Errored.html  System-Directory-Layout-Internal.html  System-Directory-Layout-Interpreter.html  System-Directory-Layout-Lens.html  System-Directory-Layout-Make.html  System-Directory-Layout-Parser.html  System-Directory-Layout-QQ.html  System-Directory-Layout-Traverse.html  System-Directory-Layout-Validation.html  System-Directory-Layout.html  cabal.sandbox.config  directory-layout.cabal  directory-layout.haddock  doc-index.html  file-layout.cabal  index-frames.html  index.html  mini_System-Directory-Layout-Check.html  mini_System-Directory-Layout-Errored.html  mini_System-Directory-Layout-Internal.html  mini_System-Directory-Layout-Interpreter.html  mini_System-Directory-Layout-Lens.html  mini_System-Directory-Layout-Make.html  mini_System-Directory-Layout-Parser.html  mini_System-Directory-Layout-QQ.html  mini_System-Directory-Layout-Traverse.html  mini_System-Directory-Layout-Validation.html  mini_System-Directory-Layout.html  params.json  readme.markdown
layout/: Main.hs
src/: System-Directory-Layout-Check.html  System-Directory-Layout-Errored.html  System-Directory-Layout-Internal.html  System-Directory-Layout-Interpreter.html  System-Directory-Layout-Lens.html  System-Directory-Layout-Make.html  System-Directory-Layout-Parser.html  System-Directory-Layout-QQ.html  System-Directory-Layout-Traverse.html  System-Directory-Layout.html
src/Biegunka/: FileLayout.hs
src/Biegunka/FileLayout/: Check.hs  Flt.hs  Internal.hs  Run.hs
src/System/Directory/: Layout.hs
src/System/Directory/Layout/: Check.hs  Errored.hs  Internal.hs  Interpreter.hs  Lens.hs  Make.hs  Parser.hs  QQ.hs  Traverse.hs
test/: Doctest.hs  SpecHelper.hs  doctests.hs
test/System/Directory/: LayoutSpec.hs
test/System/Directory/Layout/: InternalSpec.hs  InterpreterSpec.hs  QQSpec.hs
tests/: Hspec.hs  Main.hs  doctests.hs
tests/System/Directory/: LayoutSpec.hs
tests/System/Directory/Layout/: InternalSpec.hs
tests/check/: Main.hs
tests/run/: Main.hs
