name:          directory-layout
version:       0.5.0.0
synopsis:      Declare, construct and verify directory layout
description:   Language to express directory layouts
category:      System
license:       BSD3
license-file:  LICENSE
author:        Matvey Aksenov
maintainer:    matvey.aksenov@gmail.com
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type: git
  location: https://github.com/supki/directory-layout

library
  default-language:
    Haskell2010
  build-depends:
      base          >= 4 && < 5
    , directory
    , filepath
    , lens          >= 4
    , mtl
    , semigroupoids
    , semigroups
    , text
  hs-source-dirs:
    src
  exposed-modules:
    System.Directory.Layout
    System.Directory.Layout.Internal
    System.Directory.Layout.Errored
    System.Directory.Layout.Traverse
    System.Directory.Layout.Lens
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  build-depends:
      base              >= 3 && < 5
    , directory-layout
    , hspec
    , HUnit
    , process
    , semigroups
  main-is:
    Spec.hs
  hs-source-dirs:
    tests
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

test-suite doctests
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  build-depends:
      base              >= 3 && < 5
    , directory-layout
    , doctest
    , lens
    , wordexp
  main-is:
    tests/doctests.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
