name:          file-layout
version:       0.1.0.0
synopsis:      DSL for file layouts in a file system.
license:       MIT
license-file:  LICENSE
author:        Matvey Aksenov
maintainer:    matvey.aksenov@gmail.com
build-type:    Simple
cabal-version: >= 1.8

library
  exposed-modules: Biegunka.FileLayout
                   Biegunka.FileLayout.Check
  other-modules: Biegunka.FileLayout.Internal
  hs-source-dirs: src
  build-depends: base >= 3 && < 5,
                 directory,
                 filepath,
                 transformers,
                 text

test-suite check-check
  type: exitcode-stdio-1.0
  build-depends: base >= 3 && < 5,
                 HUnit,
                 process,
                 file-layout
  main-is: tests/check/Main.hs
