name:          file-layout
version:       0.1.0.0
synopsis:      DSL for file layouts in a file system.
license:       MIT
license-file:  LICENSE
author:        Matvey Aksenov
maintainer:    matvey.aksenov@gmail.com
build-type:    Simple
cabal-version: >= 1.8

library
  exposed-modules: Biegunka.FileLayout
                   Biegunka.FileLayout.Check
                   Biegunka.FileLayout.Run
                   Biegunka.FileLayout.Flt
  other-modules: Biegunka.FileLayout.Internal
  hs-source-dirs: src
  build-depends: base >= 3 && < 5,
                 directory,
                 filepath,
                 transformers,
                 parsec,
                 text
  ghc-options: -Wall
               -fno-warn-unused-do-bind

test-suite check
  type: exitcode-stdio-1.0
  build-depends: base >= 3 && < 5,
                 HUnit,
                 process,
                 file-layout
  main-is: tests/Main.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind
