name:          directory-layout
version:       0.1.0.0
synopsis:      Declare, construct and verify directory layout
license:       MIT
license-file:  LICENSE
author:        Matvey Aksenov
maintainer:    matvey.aksenov@gmail.com
build-type:    Simple
cabal-version: >= 1.8

library
  exposed-modules: System.Directory.Layout
                   System.Directory.Layout.Check
                   System.Directory.Layout.Make
                   System.Directory.Layout.Parser
                   System.Directory.Layout.Internal
  hs-source-dirs: src
  build-depends: base >= 3 && < 5,
                 directory,
                 filepath,
                 transformers,
                 parsec,
                 text
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable layout
  build-depends: base >= 3 && < 5,
                 text,
                 optparse-applicative,
                 directory-layout
  main-is: layout/Main.hs

test-suite basics-suite
  type: exitcode-stdio-1.0
  build-depends: base >= 3 && < 5,
                 HUnit,
                 process,
                 directory-layout
  main-is: tests/Main.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind
